--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
-APP_PORT=4000
+PORT=4000
 MONGO_PASSWORD="qpMyBjC0qbNCl4M2"
 MONGO_URL="mongodb+srv://db:qpMyBjC0qbNCl4M2@cluster0.gx0on.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
